--- a/wp-content/themes/cyrilbroult/sass/abstracts/variables/_structure.scss
+++ b/wp-content/themes/cyrilbroult/sass/abstracts/variables/_structure.scss
@@ -1,2 +1,26 @@
 $size__site-main: 100%;
 $size__site-sidebar: 25%;
+
+$breakpoints: (
+    sm:  576px,
+    md: 768px,
+    lg: 1024px,
+    xl: 1400px,
+    xxl: 1600px,
+    );
+
+@mixin breakpoint-up($breakpoint) {
+    @if map-has-key($breakpoints, $breakpoint) {
+        @media (min-width: map-get($breakpoints, $breakpoint)) {
+            @content;
+        }
+    }
+}
+
+@mixin breakpoint-down($breakpoint) {
+    @if map-has-key($breakpoints, $breakpoint) {
+        @media (max-width: map-get($breakpoints, $breakpoint)) {
+            @content;
+        }
+    }
+}
