--- a/wp-content/themes/cyrilbroult/sass/components/navigation/_navigation.scss
+++ b/wp-content/themes/cyrilbroult/sass/components/navigation/_navigation.scss
@@ -10,6 +10,7 @@
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
+	backdrop-filter: blur(2px);
 
 	a {
 		text-decoration: none;
