--- a/wp-content/themes/cyrilbroult/style.css
+++ b/wp-content/themes/cyrilbroult/style.css
@@ -48,6 +48,31 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 	- Alignments
 
 --------------------------------------------------------------*/
+@font-face {
+	font-family: 'Norwester';
+	src: url(fonts/norwester.otf);
+	font-weight: bold;
+}
+
+@font-face {
+	font-family: 'Glacial Indifference';
+	src: url(fonts/GlacialIndifference-Regular.otf);
+	font-weight: normal;
+}
+
+@font-face {
+	font-family: 'Glacial Indifference Italic';
+	src: url(fonts/GlacialIndifference-Italic.otf);
+	font-weight: normal;
+	font-style: italic;
+}
+
+@font-face {
+	font-family: 'Glacial Indifference Bold';
+	src: url(fonts/GlacialIndifference-Bold.otf);
+	font-weight: bold;
+}
+
 /*--------------------------------------------------------------
 # Generic
 --------------------------------------------------------------*/
@@ -618,6 +643,7 @@ textarea {
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
+	backdrop-filter: blur(2px);
 }
 
 #site-navigation a {
@@ -671,25 +697,69 @@ body.home {
 	background: #000;
 }
 
-body.home #home-bg-slider.swiper {
-	position: absolute;
-	top: 0;
-	filter: brightness(0.3);
-	z-index: -10;
+body.home section.wp-block-group.homeslider_foreground_content {
+	height: 100vh;
+	display: flex;
+	align-items: center;
+	justify-content: flex-start;
+	width: 80%;
+	margin: auto;
 }
 
-body.home #home-bg-slider.swiper:not(.swiper-initialized) {
-	position: absolute;
+body.home section.wp-block-group.homeslider_foreground_content .wp-block-group__inner-container {
+	position: fixed;
+	z-index: 0;
+}
+
+body.home section.wp-block-group.homeslider_foreground_content .wp-block-site-title {
+	font-family: "Norwester", sans-serif;
+}
+
+body.home section.wp-block-group.homeslider_foreground_content .wp-block-site-tagline {
+	font-family: "Glacial Indifference", sans-serif;
+}
+
+body.home section.wp-block-group.homeslider_foreground_content .wp-block-button a {
+	transition: filter ease-in-out 200ms;
+}
+
+body.home section.wp-block-group.homeslider_foreground_content .wp-block-button a:hover {
+	filter: brightness(200%);
+}
+
+body.home section + section {
+	z-index: 10;
+	position: relative;
+	box-shadow: 0 0px 50px rgba(0, 0, 0, 0.9);
+}
+
+body.home #home-bg-slider.swiper {
+	position: fixed;
 	top: 0;
+	filter: contrast(80%) brightness(40%);
+	z-index: -10;
+	height: 100%;
+	aspect-ratio: 3/2;
+}
+
+@media (max-width: 576px) {
+	body.home #home-bg-slider.swiper {
+		left: -50%;
+	}
+}
+
+body.home #home-bg-slider.swiper + .entry-content {
+	margin: unset;
 }
 
 body.home #home-bg-slider.swiper:not(.swiper-initialized) .swiper-slide {
-	position: absolute;
+	position: fixed;
 	top: 0;
-	left: 0;
-	height: 100vh;
-	width: 100vw;
+	filter: brightness(0.3);
 	z-index: -10;
+	height: 100%;
+	aspect-ratio: 3/2;
+	left: -50%;
 }
 
 /* Comments
@@ -883,6 +953,11 @@ body.home #home-bg-slider.swiper:not(.swiper-initialized) .swiper-slide {
 	margin-left: auto;
 	margin-right: auto;
 	margin-bottom: 1.5em;
+}
+
+.container {
+	width: 80%;
+	margin: auto;
 }
 
 /*# sourceMappingURL=style.css.map */
