--- a/wp-content/themes/cyrilbroult/sass/components/navigation/_navigation.scss
+++ b/wp-content/themes/cyrilbroult/sass/components/navigation/_navigation.scss
@@ -82,6 +82,8 @@
 	}
 }
 
+$filter-drop-shadow: drop-shadow(0 1px 2px rgba(0, 0, 0, 0.5));
+
 #primary-menu {
 	display: flex;
 	gap: 2em;
@@ -91,7 +93,7 @@
 		color: $white;
 		font-family: $font-bold;
 		transition: all ease-in-out 200ms;
-		filter: drop-shadow(2px 4px 6px $black);
+		filter: $filter-drop-shadow;
 
 		&::after {
 			content: "";
@@ -101,6 +103,7 @@
 			background: $white;
 			transform: scale(0);
 			transition: transform ease-in-out 250ms;
+			filter: $filter-drop-shadow;
 		}
 
 		&:hover {
@@ -123,7 +126,11 @@
 			&:hover {
 				background-color: rgba(0, 0, 0, 0.8);
 				filter: unset;
-				box-shadow: 0px 0px 10px 10px rgba(0, 0, 0, 0.8);
+				box-shadow: 0px 0px 2px 2px rgba(0, 0, 0, 0.8);
+
+				&::after {
+					display: none;
+				}
 			}
 
 		}
@@ -147,7 +154,8 @@
 	}
 
 	@each $network in $social-networks {
-		.menu-item.#{$network} {
+		.menu-item.#{$network} a {
+			display: block;
 			position: relative;
 			visibility: hidden;
 			margin: 0;
@@ -166,7 +174,15 @@
 				height: var(--icon-size);
 				background: url('./img/svg/#{$network}-white.svg') no-repeat center center;
 				background-size: contain;
-				filter: drop-shadow(2px 4px 6px $black);
+				filter: $filter-drop-shadow;
+				transform: scale(1);
+				transition: transform ease-in-out 250ms;
+			}
+
+			&:hover {
+				&::after {
+					transform: scale(0.9);
+				}
 			}
 		}
 	}
